# sphinx-demo

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  sample.ipynb
assets/doc2.0/: conf.py  start.rst
assets/doc3.0/: conf.py  index.rst
assets/doc3.0/_templates/: class.rst  function.rst
assets/doc3.0/_templates/autosummary/: class.rst  method.rst  module.rst
assets/doc4.0/: conf.py  index.rst  start.rst
assets/doc4.0/_templates/autosummary/: class.rst
doc/: conf.py  index.rst  install.rst  numeric.interp.rst  numeric.ode.rst  numeric.rst  numeric.simple.rst
doc/_subpages/: numeric.interp.CubicHermiteSplines1d.rst  numeric.interp.LinearSplines1d.rst  numeric.interp.PolyInt.rst  numeric.interp.rst  numeric.ode.EulerSolver.rst  numeric.ode.RK4Solver.rst  numeric.ode.SimpsonSolver.rst  numeric.ode.rst  numeric.simple.cheb_poly_1.rst  numeric.simple.cheb_poly_2.rst  numeric.simple.derivative.rst  numeric.simple.rst  numeric.simple.second_derivative.rst
doc2/: index.rst  numeric.interp.rst  numeric.ode.rst  numeric.rst  numeric.sde.rst  numeric.simple.rst
doc3/: conf.py  main.rst  start.rst
doc3/_templates/autosummary/: function.rst
doc4/: conf.py  install.md  start.md
docs/: index.md  start.md
numeric/: __init__.py  interp.py  ode.py  sde.py  simple.py
