[tool.poetry]
name = "numeric"
version = "0.0.0"
description = "Numeric methods implimentation"
authors = ["Golov V.A. <durdaev2010@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
Sphinx = "^5.1.1"
matplotlib = "^3.5.3"
furo = "^2022.6.21"
loguru = "^0.6.0"
ipykernel = "^6.15.2"
pydata-sphinx-theme = "^0.10.1"
numpydoc = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
